fix: 이분 매칭에서 이미지가 오른쪽으로 치우친 현상 수정

--- a/_posts/2023-03-25-이분_매칭.md
+++ b/_posts/2023-03-25-이분_매칭.md
@@ -40,8 +40,10 @@ math: true
 ## 이분 매칭 과정
 
 먼저 아래와 같이 이분 그래프가 존재한다고 가정하자.
-![](3.png){: width="350" height=""}
 
+![](3.png){: width="300" height="" }
+
+<br>
 A그룹을 기준으로 생각해보자.<br/>
 먼저 A1은 B1 또는 B2에 연결할 수 있다. 두 노드 모두 아직 매칭이 안 됐으므로 어느 것을 선택해도 상관없지만, 위쪽 간선이 우선순위가 높다고 가정하자. 그럼 A1은 B1에 연결하게 된다.<br/>
 마찬가지로 A2는 B2와 매칭시킬 수 있다.
@@ -93,6 +95,7 @@ _A2 매칭 수정, A3와 A4를 새롭게 매칭_
 최종 매칭된 그래프는 아래와 같다.
 
 ![](6.png){: width="300" height="" }
+_최종 이분 매칭 그래프 모습_
 
 <br>
 
