feat: post(스프링 없이, 서블릿으로 애플리케이션 만들기)

--- a/_posts/2023-07-26-스프링_부트의_탄생과_철학.md
+++ b/_posts/2023-07-26-스프링_부트의_탄생과_철학.md
@@ -4,7 +4,7 @@ date: 2023-07-26 12:00:00 +09:00
 categories: [스프링 부트의 이해와 원리]
 tags:
   [
-    spring, spring boot
+    spring, spring boot, Servlet, Servlet Container, Tomcat
   ]
 img_path: /assets/img/springboot/
 ---
