--- a/_posts/2023-07-26-스프링으로_애플리케이션_만들기.md
+++ b/_posts/2023-07-26-스프링으로_애플리케이션_만들기.md
@@ -221,7 +221,7 @@ public class HellobootApplication {
 
 이제 빈으로 등록할 클래스에 `@Component`을 붙이자.
 
-우리는 메타 애노테이션(Meta-annotaion)을 이용할 것이다. 메타 애노테이션과 합성 애노테이션(Composed-annotaion)과 관련된 자세한 정보는 [여기](https://velog.io/@gmtmoney2357/%EC%8A%A4%ED%94%84%EB%A7%81-%EB%B6%80%ED%8A%B84-%EB%A9%94%ED%83%80-%EC%95%A0%EB%85%B8%ED%85%8C%EC%9D%B4%EC%85%98%EA%B3%BC-%ED%95%A9%EC%84%B1-%EC%95%A0%EB%85%B8%ED%85%8C%EC%9D%B4%EC%85%98)에서 확인할 수 있다.
+우리는 메타 애노테이션(Meta-annotaion)을 이용할 것이다. 메타 애노테이션과 합성 애노테이션(Composed-annotaion)과 관련된 자세한 정보는 [여기](https://redcarrot1.github.io/posts/메타_애노테이션과_합성_애노테이션/)에서 확인할 수 있다.
 
 애노테이션이 중첩되면, 중첩된 애노테이션들의 효과를 모두 가지게 된다. 예를 들어, `@RestController` 애노테이션은 아래와 같다.
 
