feat: KUPC 해설(K, L 추가)

--- a/_posts/2023-11-06-KUPC_후기.md
+++ b/_posts/2023-11-06-KUPC_후기.md
@@ -39,7 +39,8 @@ _Division 1_
 
 
 ## 초간단 문제 해설
-곧 공식 에토리얼이 올라오는 것으로 알고있는데, 그 전에 간단한 풀이를 올리겠습니다.
+~~곧 공식 에토리얼이 올라오는 것으로 알고있는데, 그 전에 간단한 풀이를 올리겠습니다.~~<br>
+solved.ac에 [공식 해설](https://solved.ac/arena/10/editorial)이 업로드됐습니다.
 
 ### A. 얼룩말을 찾아라
 연속된 $$1$$의 집합을 카운트하면 되는 문제였습니다. For문을 한번만 돌리면 되므로 $$O(NL)$$에 풀 수 있습니다.
@@ -105,4 +106,4 @@ void sort() {
 }
 ```
 
-K번부터는 다음 게시물에서 업로드하겠습니다.
+K번부터는 [다음 게시물](https://redcarrot1.github.io/posts/KUPC_%ED%95%B4%EC%84%A42/)에서 업로드하겠습니다.
