--- a/_posts/2023-12-25-Modular.md
+++ b/_posts/2023-12-25-Modular.md
@@ -68,8 +68,13 @@ img_path: /assets/img/cryptography/
 - $ka=kb \mod m$에서 $k$를 무조건 땔 수 있는건 아니다.
     - 예를 들어, $k=m$이거나 $k=0$이면 땔 수 없다.
 
-> 만약 $gcd(k, m)\ne1$ 라면 $k$는 곱셈의 역원이 없다.
+<br>
 
+> 만약 $gcd(k, m)\ne1$ 라면, $\mod m$에서 $k$는 곱셈의 역원이 없다.
+
+> 대우: $\mod m$에서 $k$는 곱셈의 역원이 존재하려면, $gcd(k, m)=1$ 이어야 한다.
+
+증명
 - $gcd(k,m)=d>1$
 - $k*k^{-1}=1$을 만족하는 $k^{-1}$이 있다고 가정하자
 - $k*k^{-1} =1 \mod m$ 이 가능할까?
@@ -82,7 +87,7 @@ img_path: /assets/img/cryptography/
 ## Reduced Residue System
 - $Z^*_m= \lbrace a\|gcd(a, m)=1, a\in Z_m \rbrace$
   - 역원이 항상 존재함. 즉, 곱하기와 나누기가 모두 정의가 가능한 시스템
-- $a, b \in Z^*_m$ 이면 $a*b\in Z^*_m$ 이다.
+- $a,b \in$ $Z^*_m$이면 $a*b \in Z^*_m$ 이다.
   - $gcd(a, m)=1, gcd(b, m)=1$ 이면 $gcd(a*b, m)=1$이므로
 - 더하기 빼기는 불가능함
     - 중간 빠진 원소가 존재하므로
