--- a/_posts/2023-12-28-RSA_1.md
+++ b/_posts/2023-12-28-RSA_1.md
@@ -63,6 +63,8 @@ img_path: /assets/img/cryptography/
 - Setting
     - $p$ and $q$ : large Primes,   $n=pq$,   $e$ : Encryption Key,   $d$ : Decryption Key
     - $ed=1 \mod {(p-1)(q-1)}$
+        - $e$는 $gcd(e, (p-1)(q-1))=1$을 만족해야 함 ($d$가 존재하기 위한 조건), [참고](https://redcarrot1.github.io/posts/Modular/#theorem)
+        - $e, p$가 정해진 상태에서 $d$는 곱셈의 역원을 찾으면 된다.(확장 유클리드 알고리즘)
     - $\varphi(n)=\varphi(pq)=(p-1)(q-1)$ (오일러 피 함수 특징)
         - $pq-pq*\left(\frac 1p+\frac 1q\right)+1$
 - Encryption
