post: localDateTime은 테스트하기 어렵다

--- a/_posts/2024-05-18-RPC_3(gRPC테스트).md
+++ b/_posts/2024-05-18-RPC_3(gRPC테스트).md
@@ -61,7 +61,7 @@ httpServer.start();
 
 ### 속도 비교
 gRPC는 unary, blocking 을 사용하였고, HTTP는 http/1.1, post, blocking 을 사용했다.<br>
-또한 네트워크가 서로 다른 WAN 환경이고, 10회 response time의 합이다.
+또한 네트워크가 서로 다른 WAN 환경이고, 아래 결과는 10회 전송했을 때의 response time 합이다.
 
 ![](1.png){: width="700" height="" }
 ![](2.png){: width="500" height="" }
