--- a/_posts/2023-05-25-2_SAT.md
+++ b/_posts/2023-05-25-2_SAT.md
@@ -10,10 +10,11 @@ tags:
   ]
 math: true
 ---
-2-SAT(satisfiability) 문제는 n개의 bool 변수로 이루어진 2-CNF 식이 true가 되게 하는 경우가 있는지, 있다면 각 변수에는 어떤 값이 들어가야 하는지 정하는 문제이다. [이 문제](https://www.acmicpc.net/problem/11280)에서 2-SAT이 무엇인지 잘 설명해주고 있다.
+2-SAT(satisfiability) 문제는 n개의 bool 변수로 이루어진 2-CNF 식이 true가 되게 하는 경우가 있는지, 있다면 각 변수에는 어떤 값이 들어가야 하는지 정하는 문제이다. [이 문제](https://www.acmicpc.net/problem/11280)에서 2-SAT이 무엇인지 잘 설명해주고 있다.<br>
+참고로 3-SAT(또는 SAT)는 NP-complete 문제이다.(Cook-Levin theorem)
 
 
-## 개요
+## 그래프 모델링
 $f = (\neg x1 \lor x2) \land (\neg x2 \lor x3) \land (x1 \lor x3) \land (x3 \lor x2) $인 경우를 보자.<br>
 이때 ￢는 not, ∨은 or, ∧는 and 이다.
 
@@ -36,10 +37,12 @@ $f = (\neg x1 \lor x2) \land (\neg x2 \lor x3) \land (x1 \lor x3) \land (x3 \lor
 ## 2-SAT 판정 방법
 명제들 중에서 하나라도(any) 명제를 만족하지 않는 경우는 어떻게 검출할까. 우리는 위에서 각 절이 2개의 명제를 만든다는 것을 알았다. 이 명제들을 모두 만족한다면 주어진 2-CNF는 true가 될 수 있는 경우가 존재한다는 것이다.
 
-모든 명제들이 성립되려면, 각 명제들이 서로 모순되면 안된다. 예를 들어, $x1 \rightarrow x1$, $\neg x1 \rightarrow x1$ 꼴의 명제가 동시에 존재해서는 안된다.<br>
-2개의 명제 $a \rightarrow b, b \rightarrow c$가 있다고 하자. 우리는 이 명제들을 이용해 새로운 명제($a \rightarrow c$)를 추론할 수 있다. 명제들끼리 삼단 논법과 같은 추론을 계속 적용시켰을 때, 모순이 발생하지 않아야 한다.
+모든 명제들이 성립되려면, 각 명제들이 서로 모순되면 안된다. $x1 \rightarrow \neg x1$, $\neg x1 \rightarrow x1$ 꼴의 명제가 동시에 존재해서는 안된다.<br>
+명제 $x1 \rightarrow \neg x1$가 참이 되려면 $x1$이 false 이어야한다. 논리학에서는 이것을 **vacuous truth** 라고 부른다. 전제가 거짓이면 명제는 항상 참이다. 같은 이유로 $\neg x1 \rightarrow x1$가 참이 되려면 $x1$이 true이면 된다. 따라서 $x1 \rightarrow \neg x1$, $\neg x1 \rightarrow x1$ 명제가 동시에 존재하면 안된다.<br>
 
-명제를 그래프로 모델링한다면, 명제 추론은 '정점 a에서 정점 b로 가는 경로(path)가 있다.'로 바꿀 수 있다. 따라서 정점 xi에서 ￢xi로 가는 경로가 양쪽으로 존재하면 안된다. 이는 두 정점이 같은 SCC에 있으면 안되는 경우로 바꿀 수 있다. 따라서 2-SAT 문제는 SCC 문제이기도 하다.
+2개의 명제 $a \rightarrow b, b \rightarrow c$가 있다고 하자. 우리는 이 명제들을 이용해 새로운 명제($a \rightarrow c$)를 추론할 수 있다. 명제들끼리 삼단 논법과 같은 추론을 계속 적용시켰을 때, 모순이 발생하지 않아야 한다. 명제를 그래프로 모델링한다면, 명제 추론은 '정점 a에서 정점 b로 가는 경로(path)가 있다.'로 바꿀 수 있다.<br>
+
+결론적으로 정점 xi에서 ￢xi로 가는 경로가 양쪽으로 존재하면 안된다. 이는 두 정점이 같은 SCC에 있으면 안되는 경우로 바꿀 수 있다. 따라서 2-SAT 문제는 SCC 문제이기도 하다.
 
 
 ---
