edit modular post

--- a/_posts/2023-12-25-Modular.md
+++ b/_posts/2023-12-25-Modular.md
@@ -15,6 +15,7 @@ img_path: /assets/img/cryptography/
 
 ### Definition
 > $b\equiv a \mod m \iff m\|(b-a)$
+{: .prompt-tip }
 
 - 모듈러 합동(Modular Congruent)을 $b\equiv a$와 같이 표현하는 경우가 대부분이나, 본 암호학 시리즈에서는 모두 $=$ 기호로 통일하겠습니다.
 - 예시) $10+5=8$ mod 7
@@ -64,30 +65,30 @@ img_path: /assets/img/cryptography/
 ## Theorem
 
 > $ka=kb \mod m$ and $gcd(k, m)=1$, then $a=b \mod m$
+{: .prompt-tip }
 
-- $ka=kb \mod m$에서 $k$를 무조건 땔 수 있는건 아니다.
+- $ka=kb \mod m$이라고 해서 무조건 $a=b \mod m$인건 아니다.
     - 예를 들어, $k=m$이거나 $k=0$이면 땔 수 없다.
+- 아래 오일러 정리 증명에 사용됩니다.
 
 <br>
 
-> 만약 $gcd(k, m)\ne1$ 라면, $\mod m$에서 $k$는 곱셈의 역원이 없다.
-
-> 대우: $\mod m$에서 $k$는 곱셈의 역원이 존재하려면, $gcd(k, m)=1$ 이어야 한다.
-
-증명
-- $gcd(k,m)=d>1$
-- $k*k^{-1}=1$을 만족하는 $k^{-1}$이 있다고 가정하자
-- $k*k^{-1} =1 \mod m$ 이 가능할까?
-- $gcd(k, m)=d \rightarrow k, m$은 $d$의 배수이다.
-- $k*k^{-1}$은 $d$의 배수, $m$도 $d$의 배수이므로 나머지도 반드시 $d$의 배수여야 한다.
-- 따라서 $k*k^{-1} =1 \mod m$ 은 불가능하다.
+> 만약 $gcd(k, m)\ne1$ 라면, $\mod m$에서 $k$는 곱셈의 역원이 없다.<br>
+대우: $\mod m$에서 $k$는 곱셈의 역원이 존재하려면, $gcd(k, m)=1$ 이어야 한다.
+{: .prompt-tip }
+- RSA에서 암호화 키를 선정하는데 사용됩니다.
+- 증명
+  - $k* k^{-1}=1 \mod m$는 $k*k^{-1}=am+1$로 나타낼 수 있다. ($a$는 정수)
+  - 따라서 $k*k^{-1}-am = 1$ 이다.
+  - $gcd(k,m)=d$라면 $k*k^{-1}-am$은 $d$의 배수가 된다.
+  - 따라서 $d*(...)=1$ 을 만족하는 $d$는 $1$만 존재한다.
 
 <br>
 
 ## Reduced Residue System
 - $Z^*_m= \lbrace a\|gcd(a, m)=1, a\in Z_m \rbrace$
   - 역원이 항상 존재함. 즉, 곱하기와 나누기가 모두 정의가 가능한 시스템
-- $a,b \in$ $Z^*_m$이면 $a*b \in Z^*_m$ 이다.
+- $a,b \in Z_m^{\*}$이면 $a*b \in Z_m^{\*}$ 이다.
   - $gcd(a, m)=1, gcd(b, m)=1$ 이면 $gcd(a*b, m)=1$이므로
 - 더하기 빼기는 불가능함
     - 중간 빠진 원소가 존재하므로
@@ -98,20 +99,22 @@ img_path: /assets/img/cryptography/
 
 <br>
 
-## $Z^*_m$  : What if $m$ is a Prime?
-- Field : 더하기, 빼기, 곱하기, 나누기가 잘 되는 시스템
-  - 예를 들어, 유리수와 실수 시스템은 Field이다.
-- $Z^*_m= \lbrace a\|gcd(a, m)=1\rbrace=\lbrace 1, 2, \dots, m-1\rbrace$
-- $Z_m=\lbrace 0, 1, 2, \dots, m-1\rbrace=Z^*_m \cup \{0\}$
-  - $Z_m$은 덧셈, 뺄셈 가능
-  - $Z^*_m$ 은 곱셈, 뺄셈 가능
-- 따라서 $Z_m$은 (finite) Field이다.
+## $|Z_n^{\*}| = \phi(n)$ : Euler’s phi function
 
+- $\varphi(n) = n\prod_{p\|n} \left(1-\frac 1 p\right)$ where $p$ runs over all the primes dividing $n$
+    - ex. $Z_{15}^{\*}=\lbrace 1, 2, 4, 7, 8, 11, 13, 14 \rbrace, \|Z_{15}^{\*}\|=8$
+    - $\phi(15)=15 * (1-\frac 13)(1-\frac15)=8$
+- If $p$ is prime, then $Z_p^{\*}=\lbrace 1, 2, \dots, p-1 \rbrace $ and $\phi(p)=n-1$
+- 오일러 피 함수 특징
+  - If Prime $p$, then $\varphi(p) = p-1$
+  - If Prime $p, q$, then $\varphi(pq) = \varphi(p)\times\varphi(q)=(p-1)(q-1)$
+  - 증명은 [여기](https://dimenchoi.tistory.com/52) 블로그를 참고해주세요.
 <br>
 
 ## Euler Theorem
 
-> If $a\in Z_m^{\*}$ then $a^{\varphi(m)}=1 \mod m$. 이때 $\varphi(m)=\|Z_m{^\*}\|$
+> If $a\in Z_m^{\*}$, $m>1$, then $a^{\varphi(m)}=1 \mod m$. 이때 $\varphi(m)=\|Z_m{^\*}\|$
+{: .prompt-tip }
 
 - $a^1, a^2, a^2, \cdots \mod m$ 은 결국 사이클이 생김
     - $Z^*_m$가 유한하기 때문에 비둘기집 원리로 인해 중복 원소가 나온다.
@@ -126,17 +129,15 @@ img_path: /assets/img/cryptography/
   - $Z_m^{\*}=\lbrace b_1,b_2, \cdots, b_{\varphi(m)} \rbrace$
   - $aZ_m^{\*}=\lbrace ab_1,ab_2, \dots, ab_{\varphi(m)} \rbrace$, $a\in Z_m^{\*}$
       - 집합 원소는 모두 다르다.
-      - 또한 모든 원소는 $Z^{\*}_m$의 원소이다. - 곱셈에 대해 닫혀있음
+        - 만약 $ab_1=ab_2 \mod m$ 이면, $gcd(a, m)=1$이므로 $b_1=b_2 \mod m$ 이다. 따라서 $ab_1\not = ab_2 \mod m$ 이다.
+      - 모든 원소는 $Z^{\*}_m$의 원소이다.
+        - 곱셈에 대해 닫혀있음
   - 따라서 $Z^{\*}_m=aZ^{\*}_m$이다.
-  - $b_1\times b_2\times\dots \times b_{\varphi(m)}=b_1\times b_2\times\dots \times b_{\varphi(m)}\times a^{\varphi(m)}$
+  - 모든 원소 곱하기: $b_1\times b_2\times\dots \times b_{\varphi(m)}=b_1\times b_2\times\dots \times b_{\varphi(m)}\times a^{\varphi(m)} \mod m$
   - 따라서 $a^{\varphi(m)}=1$ 이다.
 
-- 오일러 피 함수 특징
-  - if Prime $p$ then $\varphi(p) = p-1$
-  - if Prime $p, q$ then $\varphi(pq) = \varphi(p)\times\varphi(q)=(p-1)(q-1)$
-  - 증명은 [여기](https://dimenchoi.tistory.com/52) 블로그를 참고해주세요.
-
 ## Fermat Theorem
-if $p$ is a Prime and $a\in Z^*_p$ then $a^{p-1}=1$ mod $p$
+> If $p$ is a Prime and $a\in Z^*_p$, then $a^{p-1}=1$ mod $p$
+{: .prompt-tip }
 
 - 오일러 정리에서 $a$가 소수인 특별한 케이스
