--- a/_posts/2023-12-28-RSA_1.md
+++ b/_posts/2023-12-28-RSA_1.md
@@ -14,7 +14,7 @@ img_path: /assets/img/cryptography/
 - Keys
     - $p$ : a Large Prime,  $e$ : Encryption Key,  $d$ : Decryption Key
     - $ed=1 \mod {p-1}$ ($p-1$인 이유는 페르마 소정리와 관련이 있기 때문)
-        - $e$는 아무거나 잡아도 상관없지만, $gcd(e, p-1)=1$을 만족해야 함 ($d$가 존재하기 위한 조건)
+        - $e$는 아무거나 잡아도 상관없지만, $\gcd(e, p-1)=1$을 만족해야 함 ($d$가 존재하기 위한 조건)
         - $e, p$가 정해진 상태에서 $d$는 곱셈의 역원을 찾으면 된다.(확장 유클리드 알고리즘)
         - $p$는 보통 10진수로 500자리 정도 되는 큰 소수
         - 질문1) $p$는 어떻게 찾나?
@@ -61,19 +61,32 @@ img_path: /assets/img/cryptography/
 ## (Real) RSA
 
 - Setting
-    - $p$ and $q$ : large Primes,   $n=pq$,   $e$ : Encryption Key,   $d$ : Decryption Key
+    - $p$ and $q$ : 서로 다른 두 소수, $n=p\times q$, $e$ : Encryption Key,   $d$ : Decryption Key
+    - $m$: message ($\in Z_n$)
     - $ed=1 \mod {(p-1)(q-1)}$
-        - $e$는 $gcd(e, (p-1)(q-1))=1$을 만족해야 함 ($d$가 존재하기 위한 조건), [참고](https://redcarrot1.github.io/posts/Modular/#theorem)
+        - $e$는 $\gcd(e, (p-1)(q-1))=1$을 만족해야 함 ($d$가 존재하기 위한 조건), [참고](https://redcarrot1.github.io/posts/Modular/#theorem)
         - $e, p$가 정해진 상태에서 $d$는 곱셈의 역원을 찾으면 된다.(확장 유클리드 알고리즘)
-    - $\varphi(n)=\varphi(pq)=(p-1)(q-1)$ (오일러 피 함수 특징)
+    - \[참고\] $\varphi(n)=\varphi(pq)=(p-1)(q-1)$ (오일러 피 함수 특징)
         - $pq-pq*\left(\frac 1p+\frac 1q\right)+1$
 - Encryption
     - $C=m^e \mod n$
 - Decryption
     - $m=C^d \mod n$
 
-### Proof - 복원하면 원래 메시지가 되는지 보자 (중요)
+### Proof - 복원하면 원래 메시지가 되는지 보자
 
-- When $gcd(m, n)=1$
+- When $\gcd(m, n)=1$
     - $C^d=(m^e)^d=m^{ed}=m^{\varphi(n)\times k + 1}=m^1=m \mod n$
     - 오일러 정리에 의해 $m^{\varphi(n)} \mod n$은 1이다.
+- When $\gcd(m, n)=n$
+    - $m^{ed}=0=m \mod n$
+- else: 반드시 $\gcd(m, n)=p$ 또는 $q$ 이다. (because $n=pq$). $\gcd(m, n)=p$인 경우만 증명하자.
+    - $\gcd(m, n)=p$이면 $\gcd(m, p)=p$이고 $\gcd(m, q)=1$ 이다.
+    - 페르마 소정리에 의해 $m^{q-1}=1 \mod q$이고 $m^{(q-1)(q-1)}=1 \mod q$ 이다.
+    - 따라서 $m^{ed}=m^{k(p-1)(q-1)+ 1}=m \mod q$ 이다.
+    - 또한 $\gcd(m, p)=p$이므로 $m^{ed}=m^{k(p-1)(q-1)+ 1}=0=m \mod p$ 이다.
+    - **\[중간정리\]** $C^d=m \mod p, C^d=m \mod q$
+    - 다시쓰면 $C^d-m=kp, C^d-m=lq$로 표현할 수 있다.
+    - $C^d-m$은 $p, q$에 대해 각각 배수이고, $p, q$는 서로 다른 소수이므로 서로소 관계이다.
+    - 따라서 $C^d-m = x\times pq$로 내타낼 수 있고, $C^d-m=0 \mod pq$로도 나타낼 수 있다.
+    - $pq=n$ 이므로 $C^d=m \mod n$ 이다.
