--- a/_posts/2024-05-14-RPC_1(RPC란).md
+++ b/_posts/2024-05-14-RPC_1(RPC란).md
@@ -56,6 +56,6 @@ _(b)server application layer의 실행과 동기화하지 않는다는 관점에
 위 이미지(b)에 의문을 가질 수 있다. Client가 잠깐 응답을 기다리는 타임이 있는데.. 이거 synchronization 아닌가?<br>
 비동기라도 여러 방식이 존재한다. 클라이언트는 reply 자체를 기다리지 않고 계속 실행할 수도 있다(One-way RPC). 속도는 더 빠를 수 있지만, 네트워크 reliability가 보장되지 않는 환경에서는 최소한 server의 stub 응답 정도는 받는게 안전할 것 같다.
 
-서버가 프로시저를 실행하는 동안 기다리기는 싫지만, 결과물은 받고 싶을 때에는 deferred synchrounous RPC를 사용하기도 한다.
+서버가 프로시저를 실행하는 동안 기다리기는 싫지만, 결과물은 받고 싶을 때에는 deferred synchronous RPC를 사용하기도 한다.
 ![](4.png){: width="700" height="" }
 
