--- a/_posts/2024-05-15-RPC_2(gRPC개념).md
+++ b/_posts/2024-05-15-RPC_2(gRPC개념).md
@@ -76,7 +76,7 @@ _https://developer.mozilla.org/ko/docs/Web/HTTP/Connection_management_in_HTTP_1.
   - HTTP/2 방식에서 작은 객체는 4프레임이 보내지면 전송이 완료된다. (사실 상황에 따라 다르다.)
 - Server Push
   - 클라이언트가 요청하지 않았던 리소스를 서버가 보낼 수 있다.
-- Coompression header
+- Compression header
   - 이전 request만 다른 필드의 value만 전송한다.
   - 추가로 허프만 인코딩(압축)을 수행하여 헤더의 크기를 더욱 줄였다.
 ![](4.png){: width="500" height="" }
