--- a/_posts/2023-12-28-RSA_1.md
+++ b/_posts/2023-12-28-RSA_1.md
@@ -82,11 +82,11 @@ img_path: /assets/img/cryptography/
     - $m^{ed}=0=m \mod n$
 - else: 반드시 $\gcd(m, n)=p$ 또는 $q$ 이다. (because $n=pq$). $\gcd(m, n)=p$인 경우만 증명하자.
     - $\gcd(m, n)=p$이면 $\gcd(m, p)=p$이고 $\gcd(m, q)=1$ 이다.
-    - 페르마 소정리에 의해 $m^{q-1}=1 \mod q$이고 $m^{(q-1)(q-1)}=1 \mod q$ 이다.
+    - 페르마 소정리에 의해 $m^{q-1}=1 \mod q$이고 $m^{(p-1)(q-1)}=1 \mod q$ 이다.
     - 따라서 $m^{ed}=m^{k(p-1)(q-1)+ 1}=m \mod q$ 이다.
     - 또한 $\gcd(m, p)=p$이므로 $m^{ed}=m^{k(p-1)(q-1)+ 1}=0=m \mod p$ 이다.
-    - **\[중간정리\]** $C^d=m \mod p, C^d=m \mod q$
+    - **\[여기까지 결론\]** $C^d=m \mod p, C^d=m \mod q$
     - 다시쓰면 $C^d-m=kp, C^d-m=lq$로 표현할 수 있다.
     - $C^d-m$은 $p, q$에 대해 각각 배수이고, $p, q$는 서로 다른 소수이므로 서로소 관계이다.
-    - 따라서 $C^d-m = x\times pq$로 내타낼 수 있고, $C^d-m=0 \mod pq$로도 나타낼 수 있다.
+    - 따라서 $C^d-m = x\times pq$로 나타낼 수 있고, $C^d-m=0 \mod pq$로도 나타낼 수 있다.
     - $pq=n$ 이므로 $C^d=m \mod n$ 이다.
